--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><h1>Quảng Bình</h1></a>
+          <a class="navbar-brand" href=""><h1>Quảng Bình Travel</h1></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -45,16 +45,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="#">Trang chủ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#hot-place">Điểm đến</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#about">Giới thiệu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link" href="#traffic">Phương tiện</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#festival">Tin tức</a>
               </li>
             </ul>
           </div>
@@ -81,7 +84,7 @@
       </div>
 
       <!-- Địa danh -->
-      <div class="hot-place">
+      <div id="hot-place" class="hot-place">
         <h2>
           Những "địa điểm" nhất định phải đến <br />
           khi du lịch Quảng Bình
@@ -357,7 +360,7 @@
     </div>
 
     <!-- About -->
-    <div class="about row">
+    <div id="about" class="about row">
       <div class="col-lg-12 about-title about-item">
         <h2>Điểm "đặc biệt" của vùng đất và con người</h2>
         <p class="sub-title">
@@ -410,7 +413,7 @@
 
     <!-- Traffic -->
 
-    <div class="traffic">
+    <div id="traffic" class="traffic">
       <div class="traffic-container row">
         <div class="traffic-col col-lg-6">
           <h6>Phương tiện di chuyển</h6>
@@ -464,7 +467,7 @@
     </div>
 
     <!-- Festival -->
-    <div class="festival-container">
+    <div id="festival" class="festival-container">
       <div class="festival">
         <h6 class="sub-title">Lễ hội đáng xem</h6>
         <img src="./images/bl.png" alt="" />
