--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             cả đều có tại Quảng Bình.
           </p>
 
-          <button type="submit">Khám Phá Ngay</button>
+          <button type="submit"><a href="#hot-place">Khám Phá Ngay</a></button>
         </div>
         <img src="./images/head-bg.jpg" alt="" />
       </div>
