Update Some Stuff

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
         >
           <div class="item-container">
             <div class="news-content third-item">
-              <img class="logo" src="./images/oxalis-logo.webp" alt="" />
+              <img class="logo" src="./images/LOGO-Explore.png" alt="" />
               <h5 class="news-title">
                 Lễ hội đua thuyền truyền thống trên sông kiến giang Lệ thủy -
                 quảng bình
