--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
           <button type="submit">
             <a href="https://goo.gl/maps/MLVfGDjwYd1yyHmv7" target="_blank"
-              >Xem Bản Đồ</a
+              >Xem Bản Đồ <i class="fa-solid fa-location-dot"></i></a
             >
           </button>
         </div>
