--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 
       <div class="news row">
         <a
-          class="news-item col-md-4 col-md-6 col-sm-6"
+          class="news-item col-lg-4 col-md-6 col-sm-6"
           href="https://oxalisadventure.com/vi/cave/hang-son-doong/#:~:text=Ng%C3%A0y%2017%20th%C3%A1ng%2003%20n%C4%83m,nhi%C3%AAn%20l%E1%BB%9Bn%20nh%E1%BA%A5t%20th%E1%BA%BF%20gi%E1%BB%9Bi."
           target="_blank"
         >
@@ -516,7 +516,7 @@
           </div>
         </a>
         <a
-          class="news-item col-md-4 col-md-6 col-sm-6"
+          class="news-item col-lg-4 col-md-6 col-sm-6"
           href="https://vinpearl.com/vi/suoi-bang-quang-binh-suoi-nuoc-nong-co-mot-khong-hai-tai-viet-nam"
           target="_blank"
         >
@@ -540,7 +540,7 @@
           </div>
         </a>
         <a
-          class="news-item col-md-4 col-md-6 col-sm-6"
+          class="news-item col-lg-4 col-md-6 col-sm-6"
           href="https://phongnhaexplorer.com/thong-tin-du-lich-quang-binh/le-hoi-dua-thuyen-truyen-thong-le-thuy.html"
           target="_blank"
         >
